made some SEO tweakz

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
 	background-color: rgba(0,0,0,.9);
 	color: #fff;
 	position: absolute;
+	top: 0;
 	height: 100%;
 	width: 100%;
 	z-index: 10000;
