fixed bug with no more square instagram videos

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,15 +74,25 @@ body {
 .video-active {
 	height: 100%;
 	width: 100%;
+	position: absolute;
+	z-index: 3;
 }
 
-.video-hidden {
-	/*display: none;*/
+.video-bg {
 	height: 100%;
 	width: 100%;
 	position: absolute;
 	top: 0;
-	z-index: -1000;
+	z-index: 2;
+	background-color: #020F12;
+}
+
+.video-hidden {
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	z-index: 1;
 }
 
 .location-overlay {
