--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,16 @@ body {
     transition: all 500ms ease;
 }
 
+.location-overlay {
+	position: absolute;
+	bottom: 0%;
+	font-size: 2em;
+	color: rgba(365,365,365,.5);
+	width: 100%;
+	text-align: center;
+	z-index: 4;
+}
+
 .video-active {
 	height: 100%;
 	width: 100%;
@@ -93,15 +103,6 @@ body {
 	position: absolute;
 	top: 0;
 	z-index: 1;
-}
-
-.location-overlay {
-	position: absolute;
-	bottom: 0%;
-	font-size: 2em;
-	color: rgba(365,365,365,.5);
-	width: 100%;
-	text-align: center;
 }
 
 .location-overlay-text {
